--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -7,11 +7,11 @@
 
 {% for bookItem in Books %}
     <div class="col">
-        <div class="card" style="width: 200px;">
+        <div class="card" style="width: 210px;">
             <img src="{{bookItem.image}}" class="card-img-top image-fluid" alt="">
             <div class="card-body">
-                <h6 class="card-title">{{bookItem.book.title}}</h6>
-                <p id="price" class="card-text">{{bookItem.price}}</p>
+                <h6 class="card-title home-title">{{bookItem.book.title}}</h6>
+                <p id="price" class="card-text">{{bookItem.price}} ₫</p>
                 <a href="{{bookItem.id}}" class="btn btn-primary btn-sm">Xem ngay</a>
             </div>
         </div>
