--- a/home/templates/common/base.html
+++ b/home/templates/common/base.html
@@ -9,8 +9,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css" />
   </head>
   <body>
     {% include 'common/header.html' %}
