--- a/home/templates/common/header.html
+++ b/home/templates/common/header.html
@@ -1,41 +1,56 @@
-<nav class="sb-topnav navbar navbar-expand navbar-dark bg-primary">
-  <!-- Navbar Brand-->
-  <a class="navbar-brand ps-3" href="#">Shopping</a>
-  <!-- Navbar Search-->
-  <form
-    class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
-  >
-    <div class="input-group">
-      <input
-        class="form-control"
-        type="text"
-        placeholder="Tìm kiếm..."
-        aria-describedby="btnNavbarSearch"
-      />
-      <button class="btn btn-primary" id="btnNavbarSearch" type="button">
-        <i class="fas fa-search"></i>
-      </button>
+<header class="section-header">
+  <section class="header-main border-bottom">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-2 col-4">
+          <div class="brand-wrap">
+            <img class="logo" src="../../static/images/logo.png" />
+          </div>
+          <!-- brand-wrap.// -->
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <form action="#" class="search">
+            <div class="input-group w-100">
+              <input type="text" class="form-control" placeholder="Search" />
+              <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">
+                  <i class="fa fa-search"></i>
+                </button>
+              </div>
+            </div>
+          </form>
+          <!-- search-wrap .end// -->
+        </div>
+        <!-- col.// -->
+        <div class="col-lg-4 col-sm-6 col-8">
+          <div class="widgets-wrap float-md-right">
+            <div class="widget-header mr-3">
+              <a href="#" class="icon icon-sm rounded-circle border"
+                ><i class="fa fa-shopping-cart"></i
+              ></a>
+              <span class="badge badge-pill badge-danger notify">0</span>
+            </div>
+            <div class="widget-header icontext">
+              <a href="#" class="icon icon-sm rounded-circle border"
+                ><i class="fa fa-user"></i
+              ></a>
+              <div class="text">
+                <span class="text-muted">Welcome!</span>
+                <div>
+                  <a href="#">Sign in</a> |
+                  <a href="#"> Register</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- widgets-wrap.// -->
+        </div>
+        <!-- col.// -->
+      </div>
+      <!-- row.// -->
     </div>
-  </form>
-  <!-- Navbar-->
-  <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-    <li class="nav-item dropdown">
-      <a
-        class="nav-link dropdown-toggle"
-        id="navbarDropdown"
-        href="#"
-        role="button"
-        data-bs-toggle="dropdown"
-        aria-expanded="false"
-        ><i class="fas fa-user fa-fw"></i
-      ></a>
-      <ul
-        class="dropdown-menu dropdown-menu-end"
-        aria-labelledby="navbarDropdown"
-      >
-        <li><a class="dropdown-item" href="#">Cài đặt</a></li>
-        <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
-      </ul>
-    </li>
-  </ul>
-</nav>
+    <!-- container.// -->
+  </section>
+  <!-- header-main .// -->
+</header>
+<!-- section-header.// -->
