--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -1,22 +1,273 @@
-{% extends 'common/base.html' %} 
-
-{% block title %}Home{% endblock %}
+{% extends 'common/base.html' %}
 
 {% block content %}
-<div class="row p-5">
-
-{% for bookItem in Books %}
-    <div class="col">
-        <div class="card" style="width: 210px;">
-            <img src="{{bookItem.image}}" class="card-img-top image-fluid" alt="">
-            <div class="card-body">
-                <h6 class="card-title home-title">{{bookItem.book.title}}</h6>
-                <p id="price" class="card-text">{{bookItem.price}} ₫</p>
-                <a href="{{bookItem.id}}" class="btn btn-primary btn-sm">Xem ngay</a>
-            </div>
-        </div>
-    </div>
-{% endfor %}
-
+<div>
+    <nav class="navbar navbar-main navbar-expand-lg navbar-light border-bottom">
+        <div class="container">
+    
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav"
+                aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="main_nav">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Supermarket</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Partnership</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Baby &amp Toys</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Fitness sport</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Clothing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Furnitures</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"> More</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Foods and Drink</a>
+                            <a class="dropdown-item" href="#">Home interior</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Category 1</a>
+                            <a class="dropdown-item" href="#">Category 2</a>
+                            <a class="dropdown-item" href="#">Category 3</a>
+                        </div>
+                    </li>
+                </ul>
+            </div> <!-- collapse .// -->
+        </div> <!-- container .// -->
+    </nav>
+    
+    <!-- ========================= SECTION MAIN ========================= -->
+    <section class="section-main bg padding-y">
+        <div class="container">
+    
+            <div class="row">
+                <aside class="col-md-3">
+                    <nav class="card">
+                        <ul class="menu-category">
+                            <li><a href="#">Best clothes</a></li>
+                            <li><a href="#">Automobiles</a></li>
+                            <li><a href="#">Home interior</a></li>
+                            <li><a href="#">Electronics</a></li>
+                            <li><a href="#">Technologies</a></li>
+                            <li><a href="#">Digital goods</a></li>
+                            <li class="has-submenu"><a href="#">More items</a>
+                                <ul class="submenu">
+                                    <li><a href="#">Submenu name</a></li>
+                                    <li><a href="#">Great submenu</a></li>
+                                    <li><a href="#">Another menu</a></li>
+                                    <li><a href="#">Some others</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </aside> <!-- col.// -->
+                <div class="col-md-9">
+                    <article class="banner-wrap">
+                        <img src="../../static/images/banners/banner.jpg" class="w-100 rounded">
+                    </article>
+                </div> <!-- col.// -->
+            </div> <!-- row.// -->
+        </div> <!-- container //  -->
+    </section>
+    <!-- ========================= SECTION MAIN END// ========================= -->
+    
+    <!-- ========================= SECTION  ========================= -->
+    <section class="section-name padding-y-sm">
+        <div class="container">
+    
+            <header class="section-heading">
+                <a href="#" class="btn btn-outline-primary float-right">See all</a>
+                <h3 class="section-title">Popular products</h3>
+            </header><!-- sect-heading -->
+    
+    
+            <div class="row">
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/1.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Just another product name</a>
+                            <div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/2.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Some item name here</a>
+                            <div class="price mt-1">$280.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/3.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Great product name here</a>
+                            <div class="price mt-1">$56.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/4.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Just another product name</a>
+                            <div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/1.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Just another product name</a>
+                            <div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/2.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Some item name here</a>
+                            <div class="price mt-1">$280.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/3.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Great product name here</a>
+                            <div class="price mt-1">$56.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="../../static/images/items/4.jpg"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Just another product name</a>
+                            <div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+            </div> <!-- row.// -->
+    
+        </div><!-- container // -->
+    </section>
+    <!-- ========================= SECTION  END// ========================= -->
+    
+    
+    <!-- ========================= SECTION  ========================= -->
+    <section class="section-name padding-y bg">
+        <div class="container">
+    
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Download app demo text</h3>
+                    <p>Get an amazing app to make Your life easy</p>
+                </div>
+                <div class="col-md-6 text-md-right">
+                    <a href="#"><img src="../../static/images/misc/appstore.png" height="40"></a>
+                    <a href="#"><img src="../../static/images/misc/appstore.png" height="40"></a>
+                </div>
+            </div> <!-- row.// -->
+        </div><!-- container // -->
+    </section>
+    <!-- ========================= SECTION  END// ======================= -->
+    
+    
+    
+    <!-- ========================= FOOTER ========================= -->
+    <footer class="section-footer border-top">
+        <div class="container">
+            <section class="footer-top padding-y">
+                <div class="row">
+                    <aside class="col-md">
+                        <h6 class="title">Brands</h6>
+                        <ul class="list-unstyled">
+                            <li> <a href="#">Adidas</a></li>
+                            <li> <a href="#">Puma</a></li>
+                            <li> <a href="#">Reebok</a></li>
+                            <li> <a href="#">Nike</a></li>
+                        </ul>
+                    </aside>
+                    <aside class="col-md">
+                        <h6 class="title">Company</h6>
+                        <ul class="list-unstyled">
+                            <li> <a href="#">About us</a></li>
+                            <li> <a href="#">Career</a></li>
+                            <li> <a href="#">Find a store</a></li>
+                            <li> <a href="#">Rules and terms</a></li>
+                            <li> <a href="#">Sitemap</a></li>
+                        </ul>
+                    </aside>
+                    <aside class="col-md">
+                        <h6 class="title">Help</h6>
+                        <ul class="list-unstyled">
+                            <li> <a href="#">Contact us</a></li>
+                            <li> <a href="#">Money refund</a></li>
+                            <li> <a href="#">Order status</a></li>
+                            <li> <a href="#">Shipping info</a></li>
+                            <li> <a href="#">Open dispute</a></li>
+                        </ul>
+                    </aside>
+                    <aside class="col-md">
+                        <h6 class="title">Account</h6>
+                        <ul class="list-unstyled">
+                            <li> <a href="#"> User Login </a></li>
+                            <li> <a href="#"> User register </a></li>
+                            <li> <a href="#"> Account Setting </a></li>
+                            <li> <a href="#"> My Orders </a></li>
+                        </ul>
+                    </aside>
+                    <aside class="col-md">
+                        <h6 class="title">Social</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="#"> <i class="fab fa-facebook"></i> Facebook </a></li>
+                            <li><a href="#"> <i class="fab fa-twitter"></i> Twitter </a></li>
+                            <li><a href="#"> <i class="fab fa-instagram"></i> Instagram </a></li>
+                            <li><a href="#"> <i class="fab fa-youtube"></i> Youtube </a></li>
+                        </ul>
+                    </aside>
+                </div> <!-- row.// -->
+            </section> <!-- footer-top.// -->
+    
+            <section class="footer-bottom border-top row">
+                <div class="col-md-2">
+                    <p class="text-muted"> &copy 2019 Company name </p>
+                </div>
+                <div class="col-md-8 text-md-center">
+                    <span class="px-2">info@pixsellz.io</span>
+                    <span class="px-2">+879-332-9375</span>
+                    <span class="px-2">Street name 123, Avanue abc</span>
+                </div>
+                <div class="col-md-2 text-md-right text-muted">
+                    <i class="fab fa-lg fa-cc-visa"></i>
+                    <i class="fab fa-lg fa-cc-paypal"></i>
+                    <i class="fab fa-lg fa-cc-mastercard"></i>
+                </div>
+            </section>
+        </div><!-- //container -->
+    </footer>
 </div>
 {% endblock %}
