--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -1,22 +1,28 @@
-{% extends 'common/base.html' %} 
-
-{% block title %}Home{% endblock %}
-
-{% block content %}
-<div class="row p-5">
-
-{% for book in Books %}
-    <div class="col">
-        <div class="card" style="width: 200px;">
-            <img src="{{book.image}}" class="card-img-top image-fluid" alt="">
-            <div class="card-body">
-                <h6 class="card-title">{{book.title}}</h6>
-                <p id="price" class="card-text">{{book.price}}</p>
-                <a href="{{book.id}}" class="btn btn-primary btn-sm">Xem ngay</a>
-            </div>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <title>Document</title>
+  </head>
+  <body class="container mt-5">
+    <div class="d-flex gap-5">
+      <a class="btn btn-primary" href="/create-stores" role="button"
+        >Create Stores</a
+      >
+      <a class="btn btn-primary" href="/delete-stores" role="button"
+        >Delete Stores</a
+      >
+      <a class="btn btn-primary" href="/update-stores" role="button"
+        >Update Stores</a
+      >
     </div>
-
-{% endfor %}
-</div>
-{% endblock %}
+  </body>
+</html>
